--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -10,11 +10,13 @@
     // gap: 20px;
     padding-top: 100px;
     padding-bottom: 100px;
+    
     .grid-container {
       display: flex;
       flex-wrap: wrap;
       gap: 10px;
       width: 60%;
+      
       #grid1 {
         display: flex;
         flex-direction: column;
@@ -22,6 +24,7 @@
         width: 45%;
         max-height: 20vh;
       }
+      
       #grid2 {
         display: flex;
         flex-direction: column;
@@ -33,8 +36,10 @@
       .responsive_image {
         width: 100%;
         height: 100%;
+        object-fit: cover; /* Ensure the image covers the entire container and crops the excess */
       }
     }
+
     #about_text {
       display: flex;
       flex-direction: column;
@@ -45,13 +50,14 @@
       // background-color: green;
       margin-top: 0;
       padding-top: 0;
+      
       h5 {
         margin-top: 0;
       }
     }
   }
 }
-// Media query for mobile screens
+
 @media only screen and (max-width: 768px) {
   #about {
     display: flex;
@@ -61,19 +67,24 @@
     margin: 0;
     padding: 10px;
   }
+
   .grid-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
+    // display: flex;
+    // flex-direction: column;
+    // align-items: center;
+    // gap: 10px;
     width: 100%;
     margin: 0;
     // margin: 10px;
-    img {
-      width: 100%;
-      // padding: 10px;
-    }
   }
+
+  .grid-container img {
+    width: 100%;
+    height: 50vh; /* Set a fixed height for mobile screens */
+    object-fit: cover; /* Ensure the image covers the entire container and crops the excess */
+    // padding: 10px;
+  }
+  
   // #about_text {
   //   display: flex;
   //   flex-direction: column;
