--- a/src/components/banner content/banner.scss
+++ b/src/components/banner content/banner.scss
@@ -35,13 +35,14 @@
   #banner_cont {
     #banner {
       position: relative;
+      margin-top: 50px;
       #social_icons_container {
         > div {
           display: flex;
           gap: 10px;
         }
         position: absolute;
-        top: 22%;
+        top: -3%;
         left: 27%;
         font-size: 1.5em;
         .social-icon {
