--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -94,3 +94,104 @@
     margin-top: 200px;
   }
 }
+@media only screen and (max-width: 768px) {
+  #contactContainer {
+    background-color: $page-background-color;
+    display: flex;
+    flex-direction: column;
+    // width: auto;
+    // margin: 0;
+    #contact {
+      display: flex;
+      flex-direction: column;
+      // align-items: center;
+      text-align: center;
+      margin: 10px;
+      #contact_text {
+        display: flex;
+        flex-direction: column;
+      }
+      form {
+        margin-top: 30px;
+        > div {
+          > div {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
+          }
+
+          .input,
+          textarea {
+            margin-bottom: 20px;
+            background-color: #1a1a1b;
+            width: 90%;
+          }
+
+          textarea {
+            height: 32vh;
+            text-align: left;
+            padding: 10px;
+            width: 94%;
+          }
+          button {
+            width: 60%;
+          }
+        }
+      }
+    }
+  }
+  #contactCardContainer {
+    display: flex;
+    flex-direction: column;
+    margin: 20px;
+    #contactCardContent {
+      display: flex;
+      flex-direction: column;
+      // justify-content: space-between;
+      align-items: center;
+      gap: 15px;
+      // align-content: center;
+      padding-top: 100px;
+      margin: 10px;
+      // width: 100%;
+      .contactCard {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+        padding: 20px;
+        width: 100%;
+        height: 20vh;
+        color: #ffffff;
+        border: 1px solid #ffffff;
+        text-align: center;
+        // background-color: green;
+
+        h3 {
+          font-size: 2em;
+          margin-bottom: 20px;
+        }
+        p {
+          font-size: 1.5em;
+        }
+
+        hr {
+          border: 1px solid grey;
+          width: 60%;
+          margin-bottom: 30px;
+          margin-left: 0;
+        }
+      }
+    }
+    .icon_label {
+      margin-right: 20px;
+      font-size: 1em;
+    }
+  }
+  .map_container {
+    height: 400px; // Adjust the height as needed
+    margin-top: 200px;
+    width: 100%;
+  }
+}
