--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -40,19 +40,16 @@
 
 @media only screen and (max-width: 769px) {
   #nav_container {
-    // display: flex;
-    // justify-content: space-around;
-    // align-items: center;
-    // align-content: center;
-    // color: #fff;
-    // box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    // padding: 10px 20px;
-
+display: flex;
+// justify-content: space-between;
+justify-items: center;
+align-content: space-around;
+gap: 150px;
+margin: 20px;
     .logo {
       color: #f00;
-
+      width: 180px;
       img {
-        width: 280px;
         margin: 0;
         padding: 0;
       }
