--- a/src/components/our services/our_services.scss
+++ b/src/components/our services/our_services.scss
@@ -49,9 +49,9 @@
 
         & img {
           width: 100%;
-          height: 100%;
-          object-fit: cover;
-        }
+          height: 40vh; /* Set a fixed height for mobile screens */
+          object-fit: cover; /* Ensure the image covers the entire container and crops the excess */
+              }
 
         & p {
           // font-size: 1.2rem;
@@ -71,11 +71,11 @@
     width: 100%;
     margin-top: 50px;
     margin-bottom: 25px;
-
+    background-color: rgb(63, 54, 54);
     #our_sercices_text {
       display: flex;
       flex-direction: column;
-      align-items: last baseline;
+      align-items: center;
       color: gold;
       text-align: center;
       margin: 5px 20px;
@@ -108,9 +108,9 @@
 
         & img {
           width: 100%;
-          height: 100%;
-          object-fit: cover;
-        }
+          height: 40vh; /* Set a fixed height for mobile screens */
+          object-fit: cover; /* Ensure the image covers the entire container and crops the excess */
+              }
 
         // & h3 {
         //   font-size: 1.8rem;
