--- a/src/components/testimonials/testimonials.scss
+++ b/src/components/testimonials/testimonials.scss
@@ -109,89 +109,62 @@
   #testimonials {
     display: flex;
     flex-direction: column;
-    // justify-content: center;
-    // gap: 40px;
-    // width: 100%;
-    // margin: auto;
-    padding: 10px;
-    // padding-bottom: 100px;
+    width: 100%;
 
-    #testimonials_text {
-      // display: flex;
-      // flex-direction: column;
-      // justify-content: center;
-      // margin: 10px;
-      // align-items: center;
-      // text-align: center;
+    > div {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      text-align: center;
     }
 
     #testimonial_card_container {
-      display: flex;
-      flex-direction: column;
-      // justify-items: center;
-      // align-content: center;
-      width: 100%;
-      // padding: 10px;
       margin: 0;
-
+      background-color: rgb(56, 60, 71);
+      padding: 20px;
       .slider {
-        // display: flex;
-        // flex-direction: column;
-        // justify-items: center;
-        // // align-content: center;
-        // width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-items: center;
+        align-content: center;
+        width: 100%;
         padding: 15px;
         background-color: rgb(56, 60, 71);
-        // padding-right: 0;
+
         .testimonial_card {
           display: flex;
           flex-direction: column;
-          // justify-items: center;
-          // align-content: center;
-          // background-color: rgb(56, 60, 71);
-          // width: 100%;
-          padding: 15px;
-
-          // > p {
-          //   font-size: 1em;
-          // }
+          align-items: center;
+          justify-content: center;
+          background-color: rgb(56, 60, 71);
 
           .testimonial_image_byline {
             display: flex;
-            justify-content: flex-start;
+            justify-content: center;
+            align-items: center;
             gap: 20px;
             margin-top: 50px;
 
             img {
               border-radius: 50px;
-            }
-
-            .testimonial_byline {
-              h4 {
-                // padding: 0;
-                // margin: 0;
-              }
-
-              // p {
-              //   padding: 0;
-              //   margin: 5px px;
-              // }
+              width: 30%;
             }
           }
         }
       }
+
       #starRating {
         padding: 20px 0px;
       }
     }
 
-    // Add styles to make the dots visible
     .slick-dots {
       display: block !important; /* Ensure dots are displayed */
       list-style: none;
       text-align: center;
       padding: 0;
     }
+
     li {
       display: inline-block;
       margin: 0 5px;
@@ -212,11 +185,25 @@
       border-radius: 50%;
       margin-top: 150px;
     }
+
     .slick-slider button {
       visibility: hidden;
     }
+
     .slick-active button {
       background-color: gold;
+    }
+
+    .slick-slide {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .slick-slide img {
+      // display: block;
+      margin: 0 auto; /* Center the image */
+      border-radius: 50%;
+      width: 30%;
     }
   }
 }
