add mobile resposiveness

--- a/src/components/banner content/banner.scss
+++ b/src/components/banner content/banner.scss
@@ -12,6 +12,7 @@
       display: flex;
       justify-content: flex-start;
       align-items: flex-start;
+      text-align: left;
       #social_icons_container {
         font-size: 1.5em;
 
@@ -22,7 +23,7 @@
         }
         position: absolute;
         top: 8%;
-        left: -7%;
+        left: -8%;
         // transform: translate(-50%, -50%);
         // justify-content: flex-start;
         // align-items: flex-start;
