--- a/src/components/blog/blog.scss
+++ b/src/components/blog/blog.scss
@@ -23,24 +23,24 @@
       // padding-bottom: 50px;
       margin: auto;
       width: 75%;
-      #blog_card {
-        display: flex;
-        flex-direction: column;
-        background-color: rgb(52, 72, 83);
-        // height: 70vh;
-        width: 25%;
-        object-fit: cover;
-        padding: 20px;
-        a {
-          color: rgb(187, 236, 187);
-          font-weight: 900;
-        }
-        > img {
-          width: 100%;
-          height: 30vh; /* Set a fixed height for mobile screens */
-          object-fit: cover; /* Ensure the image covers the entire container and crops the excess */
-        }
-      }
+      // #blog_card {
+      //   display: flex;
+      //   // flex-direction: column;
+      //   background-color: rgb(52, 72, 83);
+      //   // height: 70vh;
+      //   width: 25%;
+      //   object-fit: cover;
+      //   padding: 20px;
+      //   a {
+      //     color: rgb(187, 236, 187);
+      //     font-weight: 900;
+      //   }
+      //   > img {
+      //     width: 100%;
+      //     height: 30vh; /* Set a fixed height for mobile screens */
+      //     object-fit: cover; /* Ensure the image covers the entire container and crops the excess */
+      //   }
+      // }
     }
   }
   .date_icon {
@@ -55,6 +55,63 @@
     img {
       height: 2vh;
       // margin-top: 20px;
+    }
+  }
+  #blog_card1 {
+    display: flex;
+    flex-direction: column;
+    #blog_card1_content {
+      display: flex;
+      flex-direction: column;
+      padding: 20px 20px 30px;
+      a {
+        color: rgb(187, 236, 187);
+        font-weight: 900;
+      }
+      ~ img {
+        width: 100%;
+        margin: auto;
+      }
+    }
+  }
+  #blog_card2 {
+    #blog_card2_content {
+      display: flex;
+      flex-direction: column;
+      #blog_image_text {
+        display: flex;
+        > img {
+          width: 100%;
+          height: 30vh;
+          // object-fit: cover;
+        }
+        a {
+          color: rgb(187, 236, 187);
+          font-weight: 900;
+        }
+      }
+    }
+  }
+  #blog_card {
+    display: flex;
+    // flex-direction: column;
+    width: 70%;
+    gap: 10px;
+    #blog_card_content {
+      background-color: rgb(52, 72, 83);
+      margin-bottom: 20px;
+      padding: 20px 20px 20px;
+      #blog_image_text {
+        > img {
+          width: 100%;
+          height: 30vh;
+          // object-fit: cover;
+        }
+        a {
+          color: rgb(187, 236, 187);
+          font-weight: 900;
+        }
+      }
     }
   }
 }
