--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -14,34 +14,50 @@
       #contact_text {
         display: flex;
         flex-direction: column;
-        width: 45%;
+        width: 50%;
       }
-      form {
+      .form {
         display: flex;
         flex-direction: column;
         width: 45%;
-        > div {
+        form {
           display: flex;
-          justify-content: space-between;
-          gap: 10px;
-        }
+          flex-direction: column;
+          width: 100%;
+          // gap: 20px;
+          margin: 0;
+          width: auto;
+          > div {
+            display: flex;
+            gap: 10px;
+            width: 100%;
+            margin: 0;
+            padding: 0;
+            // width: auto;
+            // background-color: green;
+            .input {
+              width: 100%;
+              margin: 0;
+            }
+          }
+          .input {
+            margin-bottom: 20px;
+            background-color: #1a1a1b;
+            margin: 20px 0px 20px;
+            width: auto;
+          }
 
-        .input {
-          margin-bottom: 20px;
-          padding: 20px;
-          background-color: #1a1a1b;
-        }
-        #name {
-          width: 93%;
-        }
-        #subject {
-          width: 100%;
-          width: 93%;
-        }
-        textarea {
-          width: 100%;
-          height: 32vh;
-          background-color: #1a1a1b;
+          textarea {
+            height: 12vh;
+            text-align: left;
+            padding: 10px;
+            width: 100%;
+            background-color: #1a1a1b;
+            width: auto;
+          }
+          button {
+            // width: 60%;
+          }
         }
       }
     }
@@ -110,32 +126,45 @@
       #contact_text {
         display: flex;
         flex-direction: column;
+        align-items: center;
       }
-      form {
-        margin-top: 30px;
-        > div {
+      .form {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        form {
+          display: flex;
+          flex-direction: column;
+          width: 100%;
+          // gap: 20px;
+          margin: 0;
+          width: auto;
           > div {
             display: flex;
             flex-direction: column;
-            align-items: center;
+            // gap: 10px;
             width: 100%;
+            margin: 0 auto;
           }
-
-          .input,
-          textarea {
+          .input {
             margin-bottom: 20px;
             background-color: #1a1a1b;
-            width: 90%;
+            margin: 10px 0px 10px;
+            width: auto;
           }
 
           textarea {
-            height: 32vh;
+            height: 12vh;
             text-align: left;
             padding: 10px;
-            width: 94%;
-          }
+            width: 100%;
+            background-color: #1a1a1b;
+            width: auto;
+                      margin: 10px 0px 10px;
+}
           button {
             width: 60%;
+            margin: 20px auto;
           }
         }
       }
@@ -193,5 +222,9 @@
     height: 400px; // Adjust the height as needed
     margin-top: 200px;
     width: 100%;
+  }
+  .map_container {
+    height: 400px; // Adjust the height as needed
+    margin-top: 200px;
   }
 }
