--- a/src/components/social icons/social_icons.scss
+++ b/src/components/social icons/social_icons.scss
@@ -33,7 +33,7 @@
 @media only screen and (max-width: 768px) {
   .social-icons {
     display: flex;
-    margin: 20px  0px 20px;
+    // margin-top: 40px;
   }
 
   .social-icon {
