--- a/src/components/about/aboutDetails.scss
+++ b/src/components/about/aboutDetails.scss
@@ -105,7 +105,7 @@
         .whyChooseUsCard {
           display: flex;
           flex-direction: column;
-          justify-content: center;
+          // justify-content: center;
           align-items: center;
           text-align: center;
           width: 30%;
