--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -45,6 +45,11 @@
             background-color: #1a1a1b;
             margin: 20px 0px 20px;
             width: auto;
+            transition: transform 0.5s ease-in-out;
+
+            &:hover {
+              transform: scale(1.04);
+            }
           }
 
           textarea {
@@ -54,6 +59,11 @@
             width: 100%;
             background-color: #1a1a1b;
             width: auto;
+            transition: transform 0.5s ease-in-out;
+
+            &:hover {
+              transform: scale(1.04);
+            }
           }
           button {
             // width: 60%;
@@ -83,7 +93,11 @@
         color: #ffffff;
         border: 1px solid #ffffff;
         text-align: left;
+        transition: transform 0.5s ease-in-out;
 
+        &:hover {
+          transform: scale(1.04);
+        }
         h3 {
           font-size: 2em;
           margin-bottom: 20px;
@@ -160,8 +174,8 @@
             width: 100%;
             background-color: #1a1a1b;
             width: auto;
-                      margin: 10px 0px 10px;
-}
+            margin: 10px 0px 10px;
+          }
           button {
             width: 60%;
             margin: 20px auto;
