--- a/src/components/hire us/hire_us.scss
+++ b/src/components/hire us/hire_us.scss
@@ -17,6 +17,7 @@
         width:75%;
         // z-index: 5000;
         color: white;
+        animation: fadeInSlideUp 1s ease-in-out;
         h5, p, h2 {
           width: 70%;
         }
