--- a/src/components/our record/our_record.scss
+++ b/src/components/our record/our_record.scss
@@ -9,6 +9,7 @@
     padding: 40px 0;
     margin-bottom: 100px;
     flex-wrap: wrap;
+    animation: fadeInSlideUp 1s ease-in-out;
 
     .our_record_item {
       display: flex;
