--- a/src/components/testimonials/testimonials.scss
+++ b/src/components/testimonials/testimonials.scss
@@ -17,6 +17,7 @@
       width: 40%;
       // padding-top: 0;
       // margin-top: 0;
+animation: slideInFromLeft 1s ease-in-out;
     }
 
     #testimonial_card_container {
