--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -10,13 +10,14 @@
     // gap: 20px;
     padding-top: 100px;
     padding-bottom: 100px;
-    
+
     .grid-container {
       display: flex;
       flex-wrap: wrap;
       gap: 10px;
       width: 60%;
-      
+      animation: fadeInSlideUp 1s ease-in-out;
+
       #grid1 {
         display: flex;
         flex-direction: column;
@@ -24,7 +25,7 @@
         width: 45%;
         max-height: 20vh;
       }
-      
+
       #grid2 {
         display: flex;
         flex-direction: column;
@@ -50,10 +51,11 @@
       // background-color: green;
       margin-top: 0;
       padding-top: 0;
-      
+
       h5 {
         margin-top: 0;
       }
+      animation: slideInFromLeft 1s ease-in-out;
     }
   }
 }
@@ -84,7 +86,7 @@
     object-fit: cover; /* Ensure the image covers the entire container and crops the excess */
     // padding: 10px;
   }
-  
+
   // #about_text {
   //   display: flex;
   //   flex-direction: column;
