--- a/src/components/about/aboutDetails.scss
+++ b/src/components/about/aboutDetails.scss
@@ -5,19 +5,7 @@
     background-color: #230b0b;
     // background-color: green;
     color: white;
-    // #aboutDetailsText {
-    //   display: flex;
-    //   flex-direction: column;
-    //   margin-bottom: 100px;
-    //   background-color: green;
-    //   display: flex;
-    //   flex-direction: column;
-    //   justify-content: center;
-    //   width: 50%;
-    //   margin: auto;
-    //   text-align: center;
-    //   // margin-top: 100px;
-    // }
+
     #aboutUsCardContainer {
       display: flex;
       justify-content: center;
@@ -27,7 +15,7 @@
       margin: auto;
       width: 75%;
       padding-bottom: 100px;
-
+      animation: slideInFromLeft 1s ease-in-out;
       .aboutUsCard {
         display: flex;
         flex-direction: column;
@@ -41,7 +29,11 @@
         box-shadow: 0px 0px 10px 0px #000000;
         text-align: left;
         border: 1px solid rgb(255, 255, 255);
-        & h3 {
+        transition: transform 0.5s ease-in-out;
+
+        &:hover {
+          transform: scale(1.04);
+        }& h3 {
           text-align: left;
           font-size: 1.9em;
           color: gold;
@@ -91,7 +83,7 @@
         justify-content: center;
         align-items: last baseline;
         justify-content: space-between;
-        //   background-color: rgb(214, 69, 11);
+          // background-color: rgb(214, 69, 11);
         #whyChooseUsTextTitle {
           width: 45%;
         }
@@ -111,7 +103,12 @@
           width: 30%;
           padding: 10px;
           border: 1px solid rgb(255, 255, 255);
-          img {
+          animation: fadeInSlideUp 1s ease-in-out;
+          transition: transform 0.5s ease-in-out;
+
+          &:hover {
+            transform: scale(1.04);
+          }img {
             width: 10%;
             // height: 50vh;
           }
