--- a/src/components/banners/homeBanner.scss
+++ b/src/components/banners/homeBanner.scss
@@ -5,22 +5,19 @@
     #HomeBannerContainer {
       background-color: #230b0b;
       color: white;
-      ~ div {
-        height: 70vh;
-      }
+      height: 88vh;
+  
       #banner {
+        margin-top: 90px;
         #HomeBannerText {
           display: flex;
           justify-content: flex-start;
           align-items: flex-start;
           text-align: left;
-          // margin-bottom: 100px;
-          // display: flex;
-          // flex-direction: column;
           width: 50%;
           position: relative;
           top: 10%;
-          left: 5%;
+          left: 20%;
         }
       }
     }
@@ -43,13 +40,14 @@
           align-items: center;
           text-align: center;
           padding: 20px;
-
+          animation: slideInFromLeft 1s ease-in-out;
         }
       }
       ~ div {
         > img {
           object-fit: cover;
           height: 130vh;
+          animation: slideInFromLeft 1s ease-in-out;
         }
       }
     }
