--- a/src/components/blog/blog.scss
+++ b/src/components/blog/blog.scss
@@ -12,6 +12,7 @@
       margin: auto;
       padding-top: 100px;
       width: 75%;
+      animation: slideInFromLeft 1s ease-in-out;
       div {
         width: 50%;
       }
@@ -68,10 +69,16 @@
         color: rgb(187, 236, 187);
         font-weight: 900;
       }
-      ~ img {
+      > img {
         width: 100%;
         margin: auto;
+        transition: transform 0.5s ease-in-out;
+
+        &:hover {
+          transform: scale(1.04);
+        }
       }
+      animation: fadeInSlideUp 1s ease-in-out;
     }
   }
   #blog_card2 {
@@ -83,13 +90,20 @@
         > img {
           width: 100%;
           height: 30vh;
-          // object-fit: cover;
         }
         a {
           color: rgb(187, 236, 187);
           font-weight: 900;
         }
+        > div img {
+          transition: transform 0.5s ease-in-out;
+
+          &:hover {
+            transform: scale(1.04);
+          }
+        }
       }
+      // animation: fadeInSlideUp 1s ease-in-out;
     }
   }
   #blog_card {
@@ -105,7 +119,11 @@
         > img {
           width: 100%;
           height: 30vh;
-          // object-fit: cover;
+          transition: transform 0.5s ease-in-out;
+
+          &:hover {
+            transform: scale(1.04);
+          }
         }
         a {
           color: rgb(187, 236, 187);
