--- a/src/components/gallery/gallery.scss
+++ b/src/components/gallery/gallery.scss
@@ -14,6 +14,20 @@
       align-items: last baseline;
       width: 100%;
     }
+    .carousel-item {
+      transition: transform 0.5s ease-in-out;
+
+      &:hover {
+        transform: scale(1.04);
+      }
+    }
+    img {
+      transition: transform 0.5s ease-in-out;
+
+      &:hover {
+        transform: scale(1.04);
+      }
+    }
     #gallery_container {
       display: flex;
       justify-content: center;
