--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -8,7 +8,7 @@
     color: #fff;
     font-size: 1.2rem;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    width: 60%;
+    // width: 60%;
     padding: 30px;
     .logo {
       height: 50px;
