--- a/src/components/our services/our_services.scss
+++ b/src/components/our services/our_services.scss
@@ -21,7 +21,7 @@
         flex-direction: column;
         align-items: flex-start;
         width: 100%;
-
+        animation: slideInFromLeft 1s ease-in-out;
         h2 {
           font-size: 3.5em;
         }
@@ -34,7 +34,9 @@
       width: 100%;
       // margin-top: 20px;
       flex-wrap: wrap;
-      // width: 100%;
+      // & :hover {
+      //   animation: scaleUp 1s ease-in-out;
+      // }
       .our_services_item {
         box-sizing: border-box;
         display: flex;
@@ -46,12 +48,16 @@
         background-color: rgb(63, 54, 54);
         padding-bottom: 20px;
         text-align: center;
+        transition: transform 0.5s ease-in-out;
 
+        &:hover {
+          transform: scale(1.04);
+        }
         & img {
           width: 100%;
           height: 40vh; /* Set a fixed height for mobile screens */
           object-fit: cover; /* Ensure the image covers the entire container and crops the excess */
-              }
+        }
 
         & p {
           // font-size: 1.2rem;
@@ -79,12 +85,7 @@
       color: gold;
       text-align: center;
       margin: 5px 20px;
-      // background-color: green;
-      // > div {
-      //   display: flex;
-      //   flex-direction: column;
-      //   width: 100%;
-      // }
+      animation: slideInFromLeft 1s ease-in-out;
     }
     #our_services_card_container {
       display: flex;
@@ -105,28 +106,12 @@
         background-color: rgb(63, 54, 54);
         padding-bottom: 20px;
         text-align: center;
-
+        animation: fadeInSlideUp 1s ease-in-out;
         & img {
           width: 100%;
           height: 40vh; /* Set a fixed height for mobile screens */
           object-fit: cover; /* Ensure the image covers the entire container and crops the excess */
-              }
-
-        // & h3 {
-        //   font-size: 1.8rem;
-        //   font-weight: 700;
-        //   color: rgb(245, 189, 6);
-        //   // padding: 0;
-        //   margin-bottom: 10px;
-        // }
-
-        // & p {
-        //   font-size: 1.2rem;
-        //   // margin-top: 10px;
-        //   color: white;
-        //   padding: 20px;
-        //   margin: 0;
-        // }
+        }
       }
     }
   }
