--- a/src/components/booking/pricing.scss
+++ b/src/components/booking/pricing.scss
@@ -26,6 +26,7 @@
     #price_card_container {
       display: flex;
       justify-content: space-between;
+      gap: 20px;
       flex-wrap: wrap;
       width: 75%;
       margin-top: 20px;
@@ -34,10 +35,11 @@
       .price_card {
         display: flex;
         flex-direction: column;
-        width: 21%;
+        justify-content: center;
+        width: auto;
         border: solid 1px white;
         background-color: #5c4545;
-        padding: 40px 20px;
+        padding: 40px 0px 50px;
         color: rgb(255, 255, 255);
         border-radius: 10px;
         animation: fadeInSlideUp 1s ease-in-out;
@@ -47,20 +49,20 @@
           transform: scale(1.04);
         }
         ul {
-          padding: 0; /* Remove default padding */
+          // padding: 0; /* Remove default padding */
           margin: 0; /* Remove default margin */
           list-style: none; /* Remove default bullets */
         }
 
         li {
           position: relative; /* Create a positioning context for the ::before pseudo-element */
-          padding-left: 25px; /* Space for the checkmark */
+          padding-left: 20px; /* Space for the checkmark */
         }
 
         li::before {
           content: "✔"; /* Unicode checkmark character */
           position: absolute; /* Position it absolutely within the relative li */
-          left: 0; /* Position it to the left */
+          left: -10px; /* Position it to the left */
           color: green; /* Change the color of the checkmark if desired */
           font-size: 1.2em; /* Adjust size if needed */
         }
@@ -71,11 +73,16 @@
 
         h2 {
           margin-bottom: 0;
+          margin-top: 30px;
+
           color: rgb(241, 168, 10);
         }
 
         .price {
-          padding: 30px 30px 0px 30px;
+          display: flex;
+          flex-direction: column;
+          flex-wrap: wrap;
+          padding: 0px 30px 0px 30px;
           margin-bottom: 30px;
           .currency {
             vertical-align: super;
@@ -84,12 +91,15 @@
           }
 
           span {
+            // display: flex;
             font-size: 0.52em;
             color: rgb(241, 168, 10);
           }
         }
 
         button {
+          display: flex;
+          justify-content: center;
           margin: auto;
           width: 50%;
           margin-top: 20px;
@@ -214,7 +224,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    // width: 100%;
     margin: 0;
 
     #pricingText {
@@ -235,13 +245,13 @@
       .price_card {
         display: flex;
         flex-direction: column;
-        // width: 100%;
+        width: 100%;
         border: solid 1px white;
         background-color: #5c4545;
         padding: 20px 20px;
         color: rgb(255, 255, 255);
         border-radius: 10px;
-        margin: 0px;
+        // margin: 0px;
         ul {
           padding: 0;
           margin: 0;
@@ -273,21 +283,29 @@
         }
 
         .price {
-          // padding: 30px 30px 0px 30px;
+          display: flex;
+          flex-direction: column;
+          // text-wrap: wrap;
           margin-bottom: 30px;
           .currency {
             vertical-align: super;
-            font-size: 0.7em;
+            // font-size: 0.1em;
             color: rgb(241, 168, 10);
+            margin-right: 0;
           }
 
           span {
+            // display: flex;
+            // flex-direction: column;
             font-size: 0.52em;
             color: rgb(241, 168, 10);
           }
         }
 
         button {
+          display: flex;
+          justify-content: center;
+          align-items: center;
           margin: auto;
           width: 50%;
           margin-top: 20px;
