--- a/src/components/booking/booking_form.scss
+++ b/src/components/booking/booking_form.scss
@@ -24,7 +24,7 @@
         display: flex;
         flex-direction: column;
         font-weight: bold;
-        color: #555;
+        color: #ffb109;
         input,
         select {
           margin-top: 5px;
