--- a/src/components/rent/gearsForm.scss
+++ b/src/components/rent/gearsForm.scss
@@ -1,4 +1,4 @@
-#crentingFormContainer {
+#rentingFormContainer {
   background-color: #460505;
   color: rgb(241, 238, 238);
   #gearListContainer {
