--- a/src/components/booking/pricing.scss
+++ b/src/components/booking/pricing.scss
@@ -207,12 +207,25 @@
         }
         .rent {
           display: flex;
+          flex-direction: column;
           justify-content: center;
           align-items: center;
+          gap: 10px;
           // background-color: green;
-          width: 20%;
-          button {
-            width: 50%;
+          width: 80%;
+          margin: auto;
+          button,
+          input {
+            width: 80%;
+          }
+          #rentFomCont {
+            display: flex;
+            flex-direction: column;
+            // justify-content: center;
+            // align-items: center;
+            margin: auto;
+            gap: 10px;
+            margin: 5px;
           }
         }
       }
